# django-importmap

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: nextrelease.yml  test.yml
importmap/: __init__.py  apps.py  core.py  generator.py
importmap/jinja2/: extension.py
importmap/management/commands/: importmap_generate.py
importmap/templates/importmap/: scripts.html
importmap/templatetags/: importmap.py
scripts/: format  pre-commit  test
test_project/: importmap.toml  pyproject.toml  settings.py  tests.py  wsgi.py
test_project/app/: jinja2.py  urls.py
test_project/app/static/: app.js
test_project/app/templates/: index.html
test_project/templates/jinja2/: index_jinja.html
tests/: test_importmap_generator.py
